--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,6 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoos": "^0.0.1-security"
+    "mongoose": "^6.8.3"
   }
 }
